# kcal

./: Cargo.toml  metadata.json
client/: Cargo.toml
client/src/: icon  lib.rs
client/src/gcal/: calendar.rs  calendar_list.rs  events.rs  helpers.rs  mod.rs  sendable.rs
client/src/groq/: mod.rs
client/src/prompts/: mod.rs
client/src/stt/: mod.rs
client/src/tg/: mod.rs
oauth/: Cargo.toml
oauth/src/: lib.rs
pkg/: manifest.json
pkg/client-ui/: index.html
pkg/oauth-ui/: index.html
ratatouille/: Cargo.toml
server/: Cargo.toml
server/src/: lib.rs
