[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "84b3d84" }
serde = { version = "1.0", features = ["derive"] }
oauth2 = { version = "4.4.2", default-features = false }
serde_json = "1.0"
wit-bindgen = "0.24.0"
url = "2.5.0"

llm_interface = { git = "https://github.com/kinode-dao/llm", branch = "interface"}
stt_interface = { git = "https://github.com/kinode-dao/stt", branch = "interface"}
telegram_interface = { git = "https://github.com/kinode-dao/telegram-bot/", branch = "zen/interface" }
frankenstein = { version = "0.30", default-features = false, features = ["telegram-trait"] } 
serde_derive = "1.0.202"
chrono = "^0.4"
chrono-tz = "0.9.0"
rand = "0.8.5"



[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
